tests/dataset/tpc-ds/compiler/c/q73.error
/tmp/TestCCompiler_TPCDS_Goldenq733094166173/001/prog.c:229:3: error: unknown type name ‘map_string_int’
  229 |   map_string_int key;
      |   ^~~~~~~~~~~~~~
/tmp/TestCCompiler_TPCDS_Goldenq733094166173/001/prog.c: In function ‘test_TPCDS_Q73_simplified’:
/tmp/TestCCompiler_TPCDS_Goldenq733094166173/001/prog.c:280:51: error: ‘(tmp1_t *)&tmp1’ is a pointer; did you mean to use ‘->’?
  280 |   if (test_TPCDS_Q73_simplified_result.len != tmp1.len) {
      |                                                   ^
      |                                                   ->
/tmp/TestCCompiler_TPCDS_Goldenq733094166173/001/prog.c:284:60: error: ‘(tmp1_t *)&tmp1’ is a pointer; did you mean to use ‘->’?
  284 |       if (test_TPCDS_Q73_simplified_result.data[i3] != tmp1.data[i3]) {
      |                                                            ^
      |                                                            ->
/tmp/TestCCompiler_TPCDS_Goldenq733094166173/001/prog.c: In function ‘main’:
/tmp/TestCCompiler_TPCDS_Goldenq733094166173/001/prog.c:323:7: warning: implicit declaration of function ‘result_item_list_t_create’ [-Wimplicit-function-declaration]
  323 |       result_item_list_t_create(groups.len * customer.len);
      |       ^~~~~~~~~~~~~~~~~~~~~~~~~
/tmp/TestCCompiler_TPCDS_Goldenq733094166173/001/prog.c:323:54: error: ‘(customer_t *)&customer’ is a pointer; did you mean to use ‘->’?
  323 |       result_item_list_t_create(groups.len * customer.len);
      |                                                      ^
      |                                                      ->
/tmp/TestCCompiler_TPCDS_Goldenq733094166173/001/prog.c:329:37: error: request for member ‘cust’ in something not a structure or union
  329 |       if (!(c.c_customer_sk == g.key.cust)) {
      |                                     ^
/tmp/TestCCompiler_TPCDS_Goldenq733094166173/001/prog.c:340:52: error: request for member ‘ticket’ in something not a structure or union
  340 |                           .ss_ticket_number = g.key.ticket,
      |                                                    ^
/tmp/TestCCompiler_TPCDS_Goldenq733094166173/001/prog.c:355:20: warning: passing argument 1 of ‘_json_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  355 |     _json_string(it.c_last_name);
      |                  ~~^~~~~~~~~~~~
/tmp/TestCCompiler_TPCDS_Goldenq733094166173/001/prog.c:64:32: note: expected ‘char *’ but argument is of type ‘const char *’
   64 | static void _json_string(char *s) { printf("\"%s\"", s); }
      |                          ~~~~~~^
/tmp/TestCCompiler_TPCDS_Goldenq733094166173/001/prog.c:359:20: warning: passing argument 1 of ‘_json_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  359 |     _json_string(it.c_first_name);
      |                  ~~^~~~~~~~~~~~~
/tmp/TestCCompiler_TPCDS_Goldenq733094166173/001/prog.c:64:32: note: expected ‘char *’ but argument is of type ‘const char *’
   64 | static void _json_string(char *s) { printf("\"%s\"", s); }
      |                          ~~~~~~^
/tmp/TestCCompiler_TPCDS_Goldenq733094166173/001/prog.c:363:20: warning: passing argument 1 of ‘_json_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  363 |     _json_string(it.c_salutation);
      |                  ~~^~~~~~~~~~~~~
/tmp/TestCCompiler_TPCDS_Goldenq733094166173/001/prog.c:64:32: note: expected ‘char *’ but argument is of type ‘const char *’
   64 | static void _json_string(char *s) { printf("\"%s\"", s); }
      |                          ~~~~~~^
/tmp/TestCCompiler_TPCDS_Goldenq733094166173/001/prog.c:367:20: warning: passing argument 1 of ‘_json_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  367 |     _json_string(it.c_preferred_cust_flag);
      |                  ~~^~~~~~~~~~~~~~~~~~~~~~
/tmp/TestCCompiler_TPCDS_Goldenq733094166173/001/prog.c:64:32: note: expected ‘char *’ but argument is of type ‘const char *’
   64 | static void _json_string(char *s) { printf("\"%s\"", s); }
      |                          ~~~~~~^
/tmp/TestCCompiler_TPCDS_Goldenq733094166173/001/prog.c:379:38: error: incompatible types when assigning to type ‘list_int’ from type ‘result_item_list_t’
  379 |   test_TPCDS_Q73_simplified_result = result;
      |                                      ^~~~~~
